syntax = "proto3";

option csharp_namespace = "BusinessLogicLayer";
package userService;

service GrpcUsers{
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

message CreateUserRequest{
  string userId = 1;
  string firstName = 2;
  string lastName = 3;
}

message UpdateUserRequest{
  string userId = 1;
  string firstName = 2;
  string lastName = 3;
}

message DeleteUserRequest{
  string userId = 1;
}

message CreateUserResponse{
  bool success = 1;
}

message UpdateUserResponse{
  bool success = 1;
}

message DeleteUserResponse{
  bool success = 1;
}